; ModuleID = '/home/carl/AnghaBench/radare2/shlr/java/extr_dsojson.c_dso_json_dict_entry_value_set_str_len.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/java/extr_dsojson.c_dso_json_dict_entry_value_set_str_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dso_json_dict_entry_value_set_str_len(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = call i64 @dso_json_is_dict_entry(i32* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %3
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32* @dso_json_str_new_from_str_len(i8* %13, i32 %14)
  store i32* %15, i32** %8, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @dso_json_dict_entry_value_set_obj(i32* %16, i32* %17)
  store i32 %18, i32* %7, align 4
  br label %19

19:                                               ; preds = %12, %3
  %20 = load i32, i32* %7, align 4
  ret i32 %20
}

declare dso_local i64 @dso_json_is_dict_entry(i32*) #1

declare dso_local i32* @dso_json_str_new_from_str_len(i8*, i32) #1

declare dso_local i32 @dso_json_dict_entry_value_set_obj(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
